--- a/notebooks/Data Introduction.ipynb
+++ b/notebooks/Data Introduction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4b2c0592-6480-4d90-9410-71dcf02ef0f6",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "82b0aa91-2a9c-40db-a733-6b0699e887e7",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
        "4   9733.43M  24-09:00:00  24-09:00:17      1     1    production      0:0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "3ce667b9-1437-4a38-a248-3bb5382dcea4",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
        "542      0:0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "72487cbb-547a-4703-b5be-a6cfa5e7a7f5",
    "metadata": {},
    "outputs": [
@@ -445,7 +445,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "2e25d575-0f1b-4f0e-bae6-835e6e5cb38d",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
        "916      0:0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "f62be55f-50ae-47af-9dc5-211e2c789aa6",
    "metadata": {},
    "outputs": [
@@ -740,7 +740,7 @@
        "4   9733.43M  24-09:00:00  24-09:00:17      1     1    production      0:0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "9af9b336-e9cf-4330-b62c-34d5191b4909",
    "metadata": {},
    "outputs": [
@@ -787,7 +787,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "e8bb61eb-382b-4846-ac2f-cccfb07ae4bf",
    "metadata": {},
    "outputs": [
@@ -820,7 +820,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "0292bff2-662f-409c-b956-5ef755c68317",
    "metadata": {},
    "outputs": [
@@ -898,7 +898,7 @@
        "18       0  41-16:00:00  28-22:35:20      1     8  cgw-dougherty1      1:0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "2ae3969c-b3e6-4890-80cf-67ff2a2b89eb",
    "metadata": {},
    "outputs": [
@@ -976,7 +976,7 @@
        "42  5229.75M  8-00:00:00  7-23:59:58      9    10  production     0:15  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "78b7742a-08d4-432a-b3c5-75f10e85bd55",
    "metadata": {},
    "outputs": [
@@ -1094,7 +1094,7 @@
        "4  returncode 0  command ['/usr/bin/sacct', '-u', 'appelte1', '...  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,9 +1120,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1134,7 +1134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
