Transforming data in progress

--- a/notebooks/slurm_processing_analysis.ipynb
+++ b/notebooks/slurm_processing_analysis.ipynb
@@ -373,8 +373,8 @@
    "id": "662c4a7d-dec2-477b-9331-90f6b69e96ab",
    "metadata": {},
    "source": [
-    "**JOBID**\n",
-    "<br>Each row is a job with a unique ID. Jobs that are submitted as arrays of similar jobs have an ID with an underscore where the number after the underscore indicates the tasknumber. For example: JOBID 31781951 was an array job with 10 parts."
+    "#### JOBID\n",
+    "Each row is a job with a unique ID. Jobs that are submitted as arrays of similar jobs have an ID with an underscore where the number after the underscore indicates the tasknumber. For example: JOBID 31781951 was an array job with 10 parts."
    ]
   },
   {
@@ -404,13 +404,13 @@
    "id": "da4c90fc-7c60-4a5e-ae07-bdad6a6cac08",
    "metadata": {},
    "source": [
-    "**STATE**\n",
-    "<br>Jobs can have a few differents states, with the most common one being 'COMPLETED'."
+    "#### STATE\n",
+    "Jobs can have a few differents states, with the most common one being 'COMPLETED'."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 74,
    "id": "ba6a3a83-fa9f-43d1-b66a-7b70ed2cc656",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,8 +463,8 @@
    "id": "b5e7c343-6d7b-4f9d-9ccb-6c355efc5fe6",
    "metadata": {},
    "source": [
-    "**BEGIN**\n",
-    "<br>Indicates when the job was started (initiated on a computer node)."
+    "#### BEGIN\n",
+    "Indicates when the job was started (initiated on a computer node)."
    ]
   },
   {
@@ -494,8 +494,8 @@
    "id": "00500225-e20b-44b3-998d-2e836df17ec1",
    "metadata": {},
    "source": [
-    "**END**\n",
-    "<br>Indicates when the job ended (completed, failed, or was cancelled while running)."
+    "#### END\n",
+    "Indicates when the job ended (completed, failed, or was cancelled while running)."
    ]
   },
   {
@@ -584,8 +584,8 @@
    "id": "b38293eb-9aa1-4e87-8812-eeb56b855dc3",
    "metadata": {},
    "source": [
-    "**USEDMEM**\n",
-    "<br>The amount of memory used in MB per node."
+    "#### USEDMEM\n",
+    "The amount of memory used in MB per node."
    ]
   },
   {
@@ -702,8 +702,8 @@
    "id": "0d7f3f90-36ee-4a67-a2e5-1b6f251490de",
    "metadata": {},
    "source": [
-    "**USEDTIME**\n",
-    "<br>The used time is in d-hh:mm:ss or hh:mm:ss for jobs less than one day in duration."
+    "#### USEDTIME\n",
+    "The used time is in d-hh:mm:ss or hh:mm:ss for jobs less than one day in duration."
    ]
   },
   {
@@ -938,8 +938,8 @@
    "id": "e7a51f9c-569c-45c6-b92c-468be4b0dc81",
    "metadata": {},
    "source": [
-    "**EXITCODE**\n",
-    "<br>The [exit code](https://www.agileconnection.com/article/overview-linux-exit-codes) for the job, with \"0:0\" indicating a successful job. Exit codes have two numbers, where if the first number is non-zero, it indicates a problem on the server side and if the second is nonzero, it indicates a problem on the user side."
+    "#### EXITCODE\n",
+    "The [exit code](https://www.agileconnection.com/article/overview-linux-exit-codes) for the job, with \"0:0\" indicating a successful job. Exit codes have two numbers, where if the first number is non-zero, it indicates a problem on the server side and if the second is nonzero, it indicates a problem on the user side."
    ]
   },
   {
@@ -1994,6 +1994,256 @@
     "* Code: Filtering and transforming datasets.  \n",
     "* Markdown: Document preprocessing steps and reasoning.  \n",
     "* Code: Combine datasets into a single dataset suitable for analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "135e1ceb-d76c-4b1c-a693-07001ba9cb38",
+   "metadata": {},
+   "source": [
+    "### Rename the dataframe columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "607d024f-1c99-41ba-ba4b-0b3fed2e322b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rename CE5 columns\n",
+    "ce5_df = ce5_df.rename(columns={0: \"TIMESTAMP\", 1: \"USER\", 2: \"RETRY\", 3: \"RUNTIME\", 4: \"RETURNCODE\", 5: \"COMMAND\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "d6ad3edb-e4be-41ec-aae0-aae71a8a8a9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rename CE6 columns\n",
+    "ce6_df = ce6_df.rename(columns={0: \"TIMESTAMP\", 1: \"USER\", 2: \"RETRY\", 3: \"RUNTIME\", 4: \"RETURNCODE\", 5: \"COMMAND\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d71d806e-f83b-4e2a-9278-d1d5dda34840",
+   "metadata": {},
+   "source": [
+    "### Filter the datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "ae116aec-ed78-4213-8fc1-71c3072d6761",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the relevant job statuses\n",
+    "relevant_state_list = [\"COMPLETED\", \"CANCELLED\", \"FAILED\", \"CANCELLED by 9204\", \"OUT_OF_MEMORY\", \"PENDING\"]\n",
+    "\n",
+    "# Filter the jobs by the relevant statuses\n",
+    "relevant_jobs_df = jobs_df[jobs_df['STATE'].isin(relevant_state_list)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "6a41f083-9411-46f7-80ce-46190d876b2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TIMESTAMP</th>\n",
+       "      <th>USER</th>\n",
+       "      <th>RETRY</th>\n",
+       "      <th>RUNTIME</th>\n",
+       "      <th>RETURNCODE</th>\n",
+       "      <th>COMMAND</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4348545</th>\n",
+       "      <td>2021-08-24 22:20:30.265776</td>\n",
+       "      <td>user 9204</td>\n",
+       "      <td>retry 0</td>\n",
+       "      <td>time 0.37424302101135254</td>\n",
+       "      <td>returncode 1</td>\n",
+       "      <td>command ['/usr/bin/squeue', '-o', '%i %T', '-j...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4348547</th>\n",
+       "      <td>2021-08-24 22:20:31.239238</td>\n",
+       "      <td>user 9204</td>\n",
+       "      <td>retry 1</td>\n",
+       "      <td>time 0.9729650020599365</td>\n",
+       "      <td>returncode 1</td>\n",
+       "      <td>command ['/usr/bin/squeue', '-o', '%i %T', '-j...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4348844</th>\n",
+       "      <td>2021-08-24 22:47:59.718903</td>\n",
+       "      <td>user 9204</td>\n",
+       "      <td>retry 0</td>\n",
+       "      <td>time 20.742536783218384</td>\n",
+       "      <td>returncode 1</td>\n",
+       "      <td>command ['/usr/bin/squeue', '-o', '%i %T', '-u...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4352864</th>\n",
+       "      <td>2021-08-25 07:05:27.811924</td>\n",
+       "      <td>user 9204</td>\n",
+       "      <td>retry 0</td>\n",
+       "      <td>time 20.023430824279785</td>\n",
+       "      <td>returncode 1</td>\n",
+       "      <td>command ['/usr/bin/squeue', '-o', '%i %T', '-u...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4352870</th>\n",
+       "      <td>2021-08-25 07:05:47.849205</td>\n",
+       "      <td>user 9204</td>\n",
+       "      <td>retry 1</td>\n",
+       "      <td>time 20.036684036254883</td>\n",
+       "      <td>returncode 1</td>\n",
+       "      <td>command ['/usr/bin/squeue', '-o', '%i %T', '-u...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4729577</th>\n",
+       "      <td>2021-10-02 15:33:07.312128</td>\n",
+       "      <td>user 9204</td>\n",
+       "      <td>retry 0</td>\n",
+       "      <td>time 20.52043867111206</td>\n",
+       "      <td>returncode 1</td>\n",
+       "      <td>command ['/usr/bin/squeue', '-o', '%i %T', '-u...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4729891</th>\n",
+       "      <td>2021-10-02 16:01:42.684681</td>\n",
+       "      <td>user 9204</td>\n",
+       "      <td>retry 0</td>\n",
+       "      <td>time 21.28179407119751</td>\n",
+       "      <td>returncode 1</td>\n",
+       "      <td>command ['/usr/bin/squeue', '-o', '%i %T', '-u...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4730187</th>\n",
+       "      <td>2021-10-02 16:34:51.632533</td>\n",
+       "      <td>user 9204</td>\n",
+       "      <td>retry 0</td>\n",
+       "      <td>time 20.060213804244995</td>\n",
+       "      <td>returncode 1</td>\n",
+       "      <td>command ['/usr/bin/squeue', '-o', '%i %T', '-u...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4730701</th>\n",
+       "      <td>2021-10-02 17:33:19.126956</td>\n",
+       "      <td>user 9204</td>\n",
+       "      <td>retry 0</td>\n",
+       "      <td>time 20.50884461402893</td>\n",
+       "      <td>returncode 1</td>\n",
+       "      <td>command ['/usr/bin/squeue', '-o', '%i %T', '-j...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4730705</th>\n",
+       "      <td>2021-10-02 17:33:39.156362</td>\n",
+       "      <td>user 9204</td>\n",
+       "      <td>retry 1</td>\n",
+       "      <td>time 20.028889894485474</td>\n",
+       "      <td>returncode 1</td>\n",
+       "      <td>command ['/usr/bin/squeue', '-o', '%i %T', '-j...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>305 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          TIMESTAMP       USER    RETRY  \\\n",
+       "4348545  2021-08-24 22:20:30.265776  user 9204  retry 0   \n",
+       "4348547  2021-08-24 22:20:31.239238  user 9204  retry 1   \n",
+       "4348844  2021-08-24 22:47:59.718903  user 9204  retry 0   \n",
+       "4352864  2021-08-25 07:05:27.811924  user 9204  retry 0   \n",
+       "4352870  2021-08-25 07:05:47.849205  user 9204  retry 1   \n",
+       "...                             ...        ...      ...   \n",
+       "4729577  2021-10-02 15:33:07.312128  user 9204  retry 0   \n",
+       "4729891  2021-10-02 16:01:42.684681  user 9204  retry 0   \n",
+       "4730187  2021-10-02 16:34:51.632533  user 9204  retry 0   \n",
+       "4730701  2021-10-02 17:33:19.126956  user 9204  retry 0   \n",
+       "4730705  2021-10-02 17:33:39.156362  user 9204  retry 1   \n",
+       "\n",
+       "                          RUNTIME    RETURNCODE  \\\n",
+       "4348545  time 0.37424302101135254  returncode 1   \n",
+       "4348547   time 0.9729650020599365  returncode 1   \n",
+       "4348844   time 20.742536783218384  returncode 1   \n",
+       "4352864   time 20.023430824279785  returncode 1   \n",
+       "4352870   time 20.036684036254883  returncode 1   \n",
+       "...                           ...           ...   \n",
+       "4729577    time 20.52043867111206  returncode 1   \n",
+       "4729891    time 21.28179407119751  returncode 1   \n",
+       "4730187   time 20.060213804244995  returncode 1   \n",
+       "4730701    time 20.50884461402893  returncode 1   \n",
+       "4730705   time 20.028889894485474  returncode 1   \n",
+       "\n",
+       "                                                   COMMAND  \n",
+       "4348545  command ['/usr/bin/squeue', '-o', '%i %T', '-j...  \n",
+       "4348547  command ['/usr/bin/squeue', '-o', '%i %T', '-j...  \n",
+       "4348844  command ['/usr/bin/squeue', '-o', '%i %T', '-u...  \n",
+       "4352864  command ['/usr/bin/squeue', '-o', '%i %T', '-u...  \n",
+       "4352870  command ['/usr/bin/squeue', '-o', '%i %T', '-u...  \n",
+       "...                                                    ...  \n",
+       "4729577  command ['/usr/bin/squeue', '-o', '%i %T', '-u...  \n",
+       "4729891  command ['/usr/bin/squeue', '-o', '%i %T', '-u...  \n",
+       "4730187  command ['/usr/bin/squeue', '-o', '%i %T', '-u...  \n",
+       "4730701  command ['/usr/bin/squeue', '-o', '%i %T', '-j...  \n",
+       "4730705  command ['/usr/bin/squeue', '-o', '%i %T', '-j...  \n",
+       "\n",
+       "[305 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Filter the scheduler logs by the tests that were unresponsive\n",
+    "ce5_df[\n",
+    "    (ce5_df['USER'] == \"user 9204\") &\n",
+    "    # (ce5_df['RUNTIME'] > 15) &\n",
+    "    (ce5_df['RETURNCODE'] != \"returncode 0\") &\n",
+    "    (ce5_df['COMMAND'].str.contains(\"/usr/bin/squeue\"))\n",
+    "]"
    ]
   },
   {
