WIP unresponsive log grouping

--- a/notebooks/slurm_processing_analysis.ipynb
+++ b/notebooks/slurm_processing_analysis.ipynb
@@ -2063,6 +2063,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "3fe0d3a1-69e6-4b8b-a889-981fd0515c0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert TIMESTAMP values to datetime objects\n",
+    "unresponseive_logs_df['TIMESTAMP'] = pd.to_datetime(unresponseive_logs_df['TIMESTAMP'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "69759da3-8223-453f-805c-433c21056d28",
    "metadata": {},
@@ -2086,38 +2097,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "2ccd4513-75a1-4fd8-94b4-b7ddad1f6d68",
+   "execution_count": 82,
+   "id": "732f3cb5-1cfc-45c1-9952-f6f9aa549e11",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 7390088 entries, 1 to 7395884\n",
-      "Data columns (total 12 columns):\n",
-      " #   Column     Dtype \n",
-      "---  ------     ----- \n",
-      " 0   JOBID      object\n",
-      " 1   STATE      object\n",
-      " 2   BEGIN      object\n",
-      " 3   END        object\n",
-      " 4   REQMEM     object\n",
-      " 5   USEDMEM    object\n",
-      " 6   REQTIME    object\n",
-      " 7   USEDTIME   object\n",
-      " 8   NODES      int64 \n",
-      " 9   CPUS       int64 \n",
-      " 10  PARTITION  object\n",
-      " 11  EXITCODE   object\n",
-      "dtypes: int64(2), object(10)\n",
-      "memory usage: 733.0+ MB\n"
+      "C:\\Users\\shann\\AppData\\Local\\Temp\\ipykernel_7300\\1439377944.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  relevant_jobs_df['BEGIN'] = pd.to_datetime(relevant_jobs_df['BEGIN'], errors=\"coerce\")\n",
+      "C:\\Users\\shann\\AppData\\Local\\Temp\\ipykernel_7300\\1439377944.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  relevant_jobs_df['END'] = pd.to_datetime(relevant_jobs_df['END'], errors=\"coerce\")\n"
      ]
     }
    ],
    "source": [
-    "relevant_jobs_df.info()"
+    "# Convert datetime column value types\n",
+    "relevant_jobs_df['BEGIN'] = pd.to_datetime(relevant_jobs_df['BEGIN'], errors=\"coerce\")\n",
+    "relevant_jobs_df['END'] = pd.to_datetime(relevant_jobs_df['END'], errors=\"coerce\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "9462ad6c-6c67-4b48-914a-a5c594e87d11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unresponseive_logs_df = unresponseive_logs_df.sort_values(\"TIMESTAMP\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "e2a9c7db-1c25-4707-9aa0-dd8766c68fae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TIMESTAMP   TIMESTAMP\n",
+       "2021-08-24  22           1\n",
+       "2021-08-25  7            6\n",
+       "            10           4\n",
+       "            11           4\n",
+       "            12           3\n",
+       "                        ..\n",
+       "2021-10-02  8            2\n",
+       "            15           2\n",
+       "            16           3\n",
+       "            17           4\n",
+       "            19           2\n",
+       "Length: 148, dtype: int64"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# (time windows, completion counts, unresponsiveness indicators)\n",
+    "group_columns_list = [unresponseive_logs_df['TIMESTAMP'].dt.date, unresponseive_logs_df['TIMESTAMP'].dt.hour]\n",
+    "unresponseive_logs_df.groupby(by=group_columns_list).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "56e1a173-10fe-4c31-a257-14b06e6f6fd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.0"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unresponseive_logs_df.rolling(window=\"15min\", on=\"TIMESTAMP\")['TIMESTAMP'].count().max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "6828eab4-6698-4d29-9560-c1445185eb22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(561, 6)"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unresponseive_logs_df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64b55ff0-fb9e-4753-94d4-74da54613136",
+   "metadata": {},
+   "source": [
+    "## Phase 3: Analyze and Visualize\n",
+    "**Objectives:**\n",
+    "* Explore the relationship between job completions and unresponsiveness.  \n",
+    "* Create visualizations and basic summary statistics.  \n",
+    "\n",
+    "**Notebook Sections:**\n",
+    "* Code: Time-series plots, scatterplots, boxplots, summary statistics.\n",
+    "* Markdown: Interpret the visualizations and describe patterns.  \n",
+    "* Code: Fit a simple logistic regression to test the hypothesis.\n",
+    "* Markdown: Summarize the results and draw conclusions from the model.  \n",
+    "* Optional: Explore additional factors (eg. day of week)."
    ]
   },
   {
